html, css, and js v1

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Pomodoro Timer</title>
 </head>
 
-<body onload="draw()">
+<body>
 		
 	<div id="navBarTop">
 			<nav class="navbar navbar-fixed-top navbar-custom" id="header">
@@ -36,15 +36,10 @@
 		  </div>
 		</div>
 			
-			<div id="canvasInputs">	
-				<p name="canvasText" id="canvasText">Work Session</p>
+			<div id="display">	
+				<p name="text" id="text">Work Session</p>
 				<input name="timer" type="text" id="timer" value="25:00" />	
 			</div>
-
-	
-		<div id="canvas">
-		<canvas id="canVas" width="410" height="300"></canvas> 
-	 	</div>  
 
 		
 		<div id ="ssRes">
