--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<div>
 			<nav class="navbar navbar-custon navbar-fixed-bottom" id="navBarBottom">
     			<span> 
-    				Copyright © 2018 Nolan Kuenzi. All rights reserved. Made for the freeCodeCamp Development Challenge: Build a Pomodoro Clock.
+    				Copyright © 2018 Nolan Kuenzi. Made for the freeCodeCamp Development Challenge: Build a Pomodoro Clock.
 				</span>
 			</nav>
 		</div>
