--- a/index.html
+++ b/index.html
@@ -2,20 +2,15 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<link  href="main.css" type="text/css" rel="stylesheet" />
-	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" rel="stylesheet" /> 
+	<link  href="./src/main.css" type="text/css" rel="stylesheet" />
 	<title>Pomodoro Timer</title>
 </head>
 
 <body>
 		
-	<div id="navBarTop">
-			<nav class="navbar navbar-fixed-top navbar-custom" id="header">
-    			<span> 
-    				<h2>Pomodoro Timer</h2>
-				</span>
-			</nav>
-		</div>
+	<div id="header">
+		<h1>Pomodoro Timer</h1>
+	</div>
 
 	<div id="bodyDiv">
 		
@@ -50,16 +45,12 @@
 	   </div> 
 	
 	</div>
-<footer>
-		<div>
-			<nav class="navbar navbar-custon navbar-fixed-bottom" id="navBarBottom">
-    			<span> 
-    				Copyright © 2018 Nolan Kuenzi. Made for the freeCodeCamp Development Challenge: Build a Pomodoro Clock.
-				</span>
-			</nav>
+	<footer>
+		<div id="footer">
+			Copyright © 2018 Nolan Kuenzi. Made for the freeCodeCamp Development Challenge: Build a Pomodoro Clock.
 		</div>
-</footer>
+	</footer> 
 
-	<script type="text/javascript" src="pomodoro.js"></script>	
+	<script type="text/javascript" src="./public/index.js"></script>	
 </body>
 </html>
