--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 </head>
 
 <body>
-		
+	<div id="bodyDiv">	
+	
 	<div id="header">
 		<h1>Pomodoro Timer</h1>
 	</div>
-
-	<div id="bodyDiv">
 		
+		<div id="content">
 		<div id="sess_break">
 		  <div>	
 			<h5 id="SL">Work Session</h5>
@@ -31,26 +31,23 @@
 		  </div>
 		</div>
 			
-			<div id="display">	
-				<p name="text" id="text">Work Session</p>
-				<input name="timer" type="text" id="timer" value="25:00" />	
-			</div>
+		<div id="display">	
+			<p name="text" id="text">Work Session</p>
+			<input name="timer" type="text" id="timer" value="25:00" />	
+		</div>
 
-		
 		<div id ="ssRes">
 		  <input name="b5" type="button" id="b5" value="Start" onclick="startFunc()" />
 		  <input name="b6" type="button" id="b6" value="Stop" onclick="stopFunc()" />
-		  <input name="b7" type="button" id="b7" value="Reset" onclick="resetFunc()"/>
-		  <input name="b8" type="button" id="b8" value="Switch" onclick="switchFunc()" />
+		  <input name="b7" type="button" id="b7" value="Reset" onclick="resetFunc()" />
+		  <input name="b8" type="button" id="b8" value="Switch" onclick="switchFunc()"/>
 	   </div> 
-	
-	</div>
-	<footer>
-		<div id="footer">
-			Copyright © 2018 Nolan Kuenzi. Made for the freeCodeCamp Development Challenge: Build a Pomodoro Clock.
-		</div>
-	</footer> 
 
+	  </div>
+	</div>
+		<div id="footer">
+			<br><b>Copyright © 2018 Nolan Kuenzi. Made for the freeCodeCamp Development Challenge: Build a Pomodoro Clock.</b></br>
+		</div>
 	<script type="text/javascript" src="./public/index.js"></script>	
 </body>
 </html>
