--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	  </div>
 	</div>
 		<div id="footer">
-			<br><b>Copyright © 2018 Nolan Kuenzi. Made for the freeCodeCamp Development Challenge: Build a Pomodoro Clock.</b></br>
+			<h4>Copyright © 2018 Nolan Kuenzi. Made for the freeCodeCamp Development Challenge: Build a Pomodoro Clock.</h4>
 		</div>
 	<script type="text/javascript" src="./public/index.js"></script>	
 </body>
